styles/header.css
.header {
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
}

.header-nav {
  max-width: 1200px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
}

.projects-link, .homepage-link, .about-link {
  font-size: 16px;
  text-transform: uppercase;
  color: inherit;
  text-align: center;
  width: 100px;
}

.projects-link {
  text-align: right;
}

.about-link {
  text-align: left;
}

.projects-link:hover, .homepage-link:hover, .about-link:hover {
  font-weight: bold;
}

.dark-mode-toggle-button {
  background-color: transparent;
  cursor: pointer;
  border: none;
  width: 30px;
  height: 30px;
  position: absolute;
  right: 15px;
  top: 15px;
  display: flex;
}

.light-black-icon {
  width: 100%;
  position: absolute;
  opacity: var(--icon-light-black);
}

.light-white-icon {
  width: 100%;
  position: absolute;
  opacity: var(--icon-light-white);
}

.coin-summary {
  background-color: var(--color-primary-shade);
  cursor: pointer;
  width: 100px;
  height: 40px;
  position: fixed;
  right: 15px;
  top: 15px;
  display: flex;
  flex-direction: row;
  box-shadow: var(--shadow-md) var(--color-primary-darker);
  border-radius: 20px;
  border-style: solid;
  border-width: 1px;
  border-color: var(--color-primary-darker);
}

.gold-coin-container {
  display: flex;
  height: 100%;
  justify-content: center;
  flex: 1;
}

.coin-amount {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 2;
  font-size: var(--font-size-h3);
  font-family: var(--font-family-accent);
  font-weight: bold;
  color: var(--color-text);
}

